--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="pokemon-pack">
-        <img src="/pokemon-cards/base set pack.png" alt="starter card">
+        <img src="./pokemon-cards/base set pack.png" alt="starter card">
     </div>
     <div id="pokemon-cards-opened">
         <!-- <div class="pokemon-card">
